--- a/chttng/index.html
+++ b/chttng/index.html
@@ -11,8 +11,9 @@
 }
 	#container {
 	   box-shadow: 7px 7px 7px 7px #000000;
-	 	dth: 435px;
-	  height: 500px;
+	  	height: 388px;
+	  	width: 438px;
+	  	position: relative;
 	}
 	body{
 		font:18px "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -30,19 +31,22 @@
 		font-family: Helvetica;
 		font-size: 18px;
 	}
-	#passage{
-		ax-width:35em;
-		line-height:145%;
-		position: fixed;
-		font-family: Helvetica;
-		font-size: 70%;
-		color: white;
-		width: 300px;
-		position: absolute;
-		z-index: 2;
-		top: 175px;
-		left: 435px;
-	}
+
+	#passage {
+     ax-width: 35em;
+    /* line-height: 145%; */
+    position: fixed;
+    font-family: Helvetica;
+    font-size: 70%;
+    color: white;
+    width: 300px;
+    position: absolute;
+    z-index: 2;
+    top: 8.5em;
+    left: 2em;
+    line-height: 1.5em;
+    }
+
 	a{
 		color: white;
 		text-decoration:none;
@@ -74,8 +78,12 @@
 
 </head>
 <body>
-<div id="container"><img  src="http://i1303.photobucket.com/albums/ag155/Zovfreullia/steam-chat_zpsgvyuwvx0.jpg"></div>
-<div id="passage"></div></div><h1> c h t t n g . . . </h1><tw-storydata name="C h _ _ t i n g" startnode="1" creator="Twine" creator-version="2.0.3" format="Snowman" options="">
+<div id="container">
+	<div id="passage"></div>
+	<img  src="http://i1303.photobucket.com/albums/ag155/Zovfreullia/steam-chat_zpsgvyuwvx0.jpg"></div>
+</div>
+<h1> c h t t n g . . . </h1>
+<tw-storydata name="C h _ _ t i n g" startnode="1" creator="Twine" creator-version="2.0.3" format="Snowman" options="">
 <script role="script" id="twine-user-script" type="text/twine-javascript"></script>
 
 
