--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -353,9 +353,9 @@ background-size: cover;
 <audio autoplay="autoplay" loop="loop">
 <source src="snowsound.mp3" type="audio/mpeg">
 </audio>
-<video autoplay loop poster="polina.jpg" id="bgvid">
-<source src="snow.webm" type="video/webm">
-<source src="snow.mp4" type="video/mp4">
+<video autoplay loop poster="./interactive-poems/polina.jpg" id="bgvid">
+<source src="./interactive-poems/snow.webm" type="video/webm">
+<source src="./interactive-poems/snow.mp4" type="video/mp4">
 </video>	
 <div id="loadingbar"></div>
 <div id="floater"><div class="container">
