--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -355,7 +355,7 @@ background-size: cover;
 </audio>
 <video autoplay loop poster="./interactive-poems/polina.jpg" id="bgvid">
 <source src="./interactive-poems/snow.webm" type="video/webm">
-<source src="./interactive-poems/snow.mp4" type="video/mp4">
+<source src="./interactive-poems/Little-Butterfly/snow.mp4" type="video/mp4">
 </video>	
 <div id="loadingbar"></div>
 <div id="floater"><div class="container">
