--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -351,11 +351,11 @@ background-size: cover;
 </head>
 <body>
 <audio autoplay="autoplay" loop="loop">
-<source src="./interactive-poems/Little-Butterfly/snowsound.mp3" type="audio/mpeg">
+<source src="https://kaira.design/interactive_poems/Little-Butterfly/snowsound.mp3" type="audio/mpeg">
 </audio>
 <video autoplay loop poster="./interactive-poems/polina.jpg" id="bgvid">
 <source src="./interactive-poems/snow.webm" type="video/webm">
-<source src="./interactive-poems/Little-Butterfly/snow.mp4" type="video/mp4">
+<source src="https://kaira.design/interactive_poems/Little-Butterfly/snow.mp4" type="video/mp4">
 </video>	
 <div id="loadingbar"></div>
 <div id="floater"><div class="container">
