--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -327,7 +327,7 @@ video#bgvid {
 position: fixed; right: 0; bottom: 0;
 min-width: 100%; min-height: 100%;
 width: auto; height: auto; z-index: -100;
-background: url(snow.jpg) no-repeat;
+background: url(https://toppng.com/uploads/preview/forest-path-snow-trees-winter-11569665014jbaudeq6fn.jpg) no-repeat;
 background-size: cover;
 }
 
