--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -200,7 +200,7 @@ body {
 	font-family: Verdana,sans-serif;
 	font-size: 62.5%;
 	margin: 0;
-	background-color: #f8f8f8;
+	background-color: #00000;
 	color: #FFFFFF;
 	text-align: center;
 }
