--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -350,7 +350,7 @@ background-size: cover;
 <style id="tagCSS"></style>
 </head>
 <body>
-<audio autoplay="autoplay" loop="loop">
+<audio controls auotoplay autoloop hidden>
 <source src="https://cdn.freesound.org/previews/614/614932_3856235-lq.mp3" type="audio/mpeg">
 </audio>
 <video autoplay loop poster="polina.jpg" id="bgvid">
