--- a/Little-Butterfly/index.html
+++ b/Little-Butterfly/index.html
@@ -128,6 +128,8 @@ function(b,a){var f=lexCss(b);a.startStylesheet&&a.startStylesheet();for(var c=0
 
 </script>
 <style id="baseCSS">
+	
+
 #passages {
 	position:relative;
 	padding-bottom: 12em;
@@ -196,6 +198,11 @@ img {
 }
 </style>
 <style id="defaultCSS">
+	
+	
+audio{
+  opacity: 0;	
+}
 body {
 	font-family: Verdana,sans-serif;
 	font-size: 62.5%;
@@ -350,7 +357,7 @@ background-size: cover;
 <style id="tagCSS"></style>
 </head>
 <body>
-<audio controls auotoplay autoloop hidden>
+<audio controls auotoplay autoloop>
 <source src="https://cdn.freesound.org/previews/614/614932_3856235-lq.mp3" type="audio/mpeg">
 </audio>
 <video autoplay loop poster="polina.jpg" id="bgvid">
